@@ -1,3 +1,8 @@
+2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_text.cpp: fixed ~edit_text_character()
+	on_event(event_id::KILLFOCUS) bug
+	
 2007-02-24  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf_text.cpp,
